fix(merlin-www-card): word-wrap the title

--- a/packages/merlin-www-card/sass/wireframe/_base.scss
+++ b/packages/merlin-www-card/sass/wireframe/_base.scss
@@ -62,7 +62,9 @@
     position: absolute;
 }
 
-.c-card__title {}
+.c-card__title {
+    word-wrap: break-word;
+}
 
 .c-card__teaser {}
 
